<resources>
    <string name="app_name">TUG_V_CLASSIFIER</string>
    <string name="loginusername">User Name</string>
    <string name="loginpassword">Password</string>
    <string name="loginbutton">Log In</string>
    <string name="IDbutton">Launch Classifier</string>
    <string name="userlogbutton">User Log</string>
    <string name="launchertext">Please Make Sure Aircraft is in Camera View Before Launching</string>
    <string name="launchbutton">Launch</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="locationheader">Your Current Location Is:</string>
    <string name="next">Next</string>
    <string name="resultsheader">Identified Towing Class:</string>
    <string name="settowingclass">Set Towing Class</string>
    <string name="incorrectbutton">Incorrect Classification</string>
    <string name="scanagainbutton">Scan Again</string>
    <string name="setDialogboxtitle">Set Towing Class: </string>
    <string name="setDialogboxmessage">Set Towing Class to Identified Setting?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="classissetdialogboxtitle">Towing Class Set</string>
    <string name="classissetdialogboxtext">The towing class has been set to </string>
    <string name="returntomenu">Return to Main Menu</string>
    <string name="scanagaintitle">Scan Again?</string>
    <string name="scanagaintext">This will reset the identifier and scan again. Proceed?</string>
    <string name="incorrectdialogtitle">Admin Approval Required</string>
    <string name="incorretdialogtext">This action requires admin approval. Proceed?</string>
    <string name="inconclusiveboxtitle">Inconclusive Result</string>
    <string name="inconsluiveboxtext">Please scan again or set towing class manually.</string>
    <string name="scanagain">Scan Again</string>
    <string name="setmanually">Set Manually</string>
    <string name="adminloginreq">Admin Login Required to Continue</string>
    <string name="goback">Go Back</string>
    <string name="incorrectclassificationlogtitle">Incorrect Classification</string>
    <string name="inconclusiveclassificatoinlogtitle">Inconclusive Classification</string>
    <string name="selectfactorstitle">Please select factors that may have contributed to incorrect classification</string>
    <string name="inconclusiveselectfactorstitle">Please select factors that may have contributed to an inconclusive classification</string>
    <string name="night">Night</string>
    <string name="overcast">Overcast</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="hail">Hail</string>
    <string name="other">Other</string>
    <string name="distortedcam">Distorted Camera Feed</string>
    <string name="cameraoffline">Camera Offline</string>
    <string name="dirtycam">Dirty Camera</string>
    <string name="campositionincorrectly">Camera Positioned Incorrectly</string>
    <string name="tireshape">Unusual Tire Shape</string>
    <string name="unknown">Unknown</string>
    <string name="save">Save</string>
    <string name="incorrectsettext">Please Select Correct Towing Class</string>
    <string name="setclassA">A</string>
    <string name="setclassB">B</string>
    <string name="setclassC">C</string>
    <string name="setclassD">D</string>
    <string name="setclassE">E</string>
    <string name="overrideboxtitle">Override Recommended Towing Class?</string>
    <string name="overrideboxline1">System Recommended Towing Class is: </string>
    <string name="overrideboxline2">You are about to set Towing Class to: </string>
    <string name="overrideboxline3">Proceed?</string>
    <string name="correctclassboxtitle">Set Recommended Towing Class?</string>
    <string name="correctclassboxline1"> was the System Recommended Towing Class.</string>
    <string name="correctclassboxline2">Would you like to set the Recommended Towing Class? Result Status will still be logged as Incorrect.</string>
    <string name="inconclusivesetboxline1">This will manually set the Towing Class to </string>
    <string name="inconclusivesetboxline2">Proceed?</string>
    <string name="unknownotherboxtitle">More Info Needed</string>
    <string name="unknownotherbottext">You selected Other or Unknown from the list of factors. Please input any relevant information about the cause of this result below.</string>
    <string name="continuebutton">Continue</string>
    <string name="locationerror">Error finding Location. Please Restart Application.</string>
    <string name="locating">Locating. Please Wait.</string>
    <string name="locationpermissiondenied">Location Permissions have been denied. Please approve location permissions before continuing.</string>
    <string name="mainmenu">Main Menu</string>
    <string name="searchbutton">Search User Log</string>
    <string name="userheader">User:</string>
    <string name="dateheader">Date:</string>
    <string name="location">Location:</string>
    <string name="resultstatusheader">Classification Status:</string>
    <string name="loadingtext">System is Loading. Please Wait.</string>
    <string name="setclass">Set Class:</string>
    <string name="recclass">Recommended Class</string>
    <string name="adminapproved">Admin Approval User Name:</string>
    <string name="observedissues">Observied Issues with Classification</string>
    <string name="userloggoback">Return to User Log List</string>
    <string name="displaypics">Display Pictures</string>
    <string name="notuploadedtext">NOTICE: This User Log has not be uploaded to Cloud Database!</string>
    <string name="addlinfo">Additional Information from User</string>
    <string name="imagecounter">Image</string>
    <string name="imageback">Previous Image</string>
    <string name="nextimage">Next Image</string>
    <string name="close">Close</string>
    <string name="showlocalonly">Show User Logs from this Device Only</string>
    <string name="userlogemptytext">Error Loading User Logs from Cloud Database.</string>
    <string name="searchuserlogheader">User Log Search</string>
    <string name="usernamesearch">Search By Username</string>
    <string name="locationsearch">Search By Location</string>
    <string name="datesearch">Search By Date</string>
    <string name="resultstatussearch">Search by Result Status</string>
    <string name="setclasssearch">Search By Set Class</string>
    <string name="recclasssearch">Search By Recommended Class</string>
    <string name="localsearchswitchtext">Search User Logs From this Device Only</string>
    <string name="createaccountusername">User Name</string>
    <string name="emailinput">Email</string>
    <string name="register">Register</string>
    <string name="createuserbutton">Create User</string>
    <string name="verficicationcode">Enter code</string>
    <string name="verify">Verify</string>
    <string name="uploadboxtitle">Upload Images?</string>
    <string name="no">No</string>
    <string name="uploadboxmessage">Some User Logs have not been updating to the cloud.\nWould you like to upload them now?\n(Logs not uploaded to the cloud will only be visible on this device)</string>
    <string-array name="resultstatusspinner">
        <item>Search By Result Status</item>
        <item>Correct</item>
        <item>Incorrect</item>
        <item>Inconclusive</item>
    </string-array>
    <string-array name="setclassspinner">
        <item>Search By Set Class</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="recclassspinner">
        <item>Search By Rec. Class</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
</resources>
