<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">


    <EditText
        android:id="@+id/usernameinpnut"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/loginusername"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameinpnut"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/loginpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordinput"
        android:layout_centerHorizontal="true"
        android:text="@string/loginbutton" />
</RelativeLayout>