<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminOverrideLogIn">

    <Space
        android:id="@+id/topspace"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        app:srcCompat="@drawable/textron"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_below="@+id/topspace"/>


    <TextView
        android:id="@+id/adminlogintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="26dp"
        android:text="@string/adminloginreq"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/adminusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/loginusername"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/adminpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminusername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/loginpassword"
        android:inputType="textPassword"
        android:singleLine="false" />

    <Button
        android:id="@+id/adminloginbutton"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminpassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="96dp"
        android:text="@string/loginbutton" />

    <Button
        android:id="@+id/goback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/goback" />
</RelativeLayout>