<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogDetailedInfo">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/usernamerow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/usernameheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userheader" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/daterow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dateheader"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateheader" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/locationrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/locationheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/resultsstatusrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resultstatusheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resultstatusheader" />

            <TextView
                android:id="@+id/resultstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/setclassrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/setclassheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setclass" />

            <TextView
                android:id="@+id/setclass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/recclassrow"
            android:visibility="invisible">

            <TextView
                android:id="@+id/recclassheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recclass" />

            <TextView
                android:id="@+id/recclass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/adminrow"
            android:visibility="invisible">

            <TextView
                android:id="@+id/adminheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adminapproved" />

            <TextView
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/factorsrow"
            android:visibility="invisible">

            <TextView
                android:id="@+id/factorsheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observedissues" />

            <TextView
                android:id="@+id/factors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/othertextrow"
            android:visibility="invisible">

            <TextView
                android:id="@+id/othertextheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addlinfo" />

            <TextView
                android:id="@+id/othertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/searchagainbutton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/custom_button_turquoise"
        android:text="back"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Button
        android:id="@+id/displaypicsbutton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/table"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/displaypics"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/notuploadedtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displaypicsbutton"
        android:text="@string/notuploadedtext"
        android:visibility="invisible" />


</RelativeLayout>