<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLog">

    <TextView
        android:id="@+id/userlogheader"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/userlogbutton"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/returntomenu" />

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gobackbutton"
        android:layout_centerHorizontal="true"
        android:text="@string/searchbutton" />

    <ListView
        android:id="@+id/userloglist"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp" />
</RelativeLayout>